kubernetes/apps/media/suwayomi/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: suwayomi
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`suwayomi.toskbot.xyz`)
      kind: Rule
      services:
        - name: suwayomi
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: suwayomi-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: suwayomi.toskbot.xyz
